--- a/idlib.vcxproj.filters
+++ b/idlib.vcxproj.filters
@@ -85,9 +85,6 @@
     <ClInclude Include="src\idlib\RuntimeErrorException.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\idlib\OutOfBoundsException.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="src\idlib\InvalidArgumentException.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -240,6 +237,9 @@
     </ClInclude>
     <ClInclude Include="src\idlib\math\interpolate_floating_point.hpp">
       <Filter>Header Files\math</Filter>
+    </ClInclude>
+    <ClInclude Include="src\idlib\out_of_bounds_exception.hpp">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
